--- a/server/package.json
+++ b/server/package.json
@@ -14,8 +14,16 @@
     "@google/generative-ai": "^0.24.1",
     "@prisma/client": "^6.9.0",
     "cors": "^2.8.5",
+    "csrf": "^3.1.0",
+    "dompurify": "^3.2.6",
     "express": "^5.1.0",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^7.5.0",
     "express-session": "^1.18.1",
+    "express-validator": "^7.2.1",
+    "helmet": "^8.1.0",
+    "hpp": "^0.2.3",
+    "jsdom": "^26.1.0",
     "multer": "^2.0.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
