--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "build": "npx prisma generate",
+    "postinstall": "npx prisma generate",
+    "init-db": "node init-db.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,22 +15,26 @@
   "license": "ISC",
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
-    "@prisma/client": "^6.9.0",
+    "prisma": "^6.9.0",
+    "bcrypt": "^5.1.1",
+    "connect-session-sequelize": "^7.1.7",
     "cors": "^2.8.5",
     "csrf": "^3.1.0",
     "dompurify": "^3.2.6",
-    "express": "^5.1.0",
+    "express": "^4.21.1",
     "express-mongo-sanitize": "^2.2.0",
-    "express-rate-limit": "^7.5.0",
+    "express-rate-limit": "^7.4.1",
     "express-session": "^1.18.1",
-    "express-validator": "^7.2.1",
+    "express-validator": "^7.2.0",
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
     "jsdom": "^26.1.0",
     "multer": "^2.0.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
-    "prisma": "^6.9.0",
-    "sqlite3": "^5.1.7"
+    "pg": "^8.13.1"
+  },
+  "devDependencies": {
+    "prisma": "^6.9.0"
   }
 }
